Fix btn alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  margin-top: 20vh;
+  justify-content: center;
 }
 
 .App-logo {
@@ -7,7 +9,6 @@
 }
 
 .App-header {
-  margin-top: 18vh;
   height: 150px;
   padding: 20px;
   color: white;
@@ -22,19 +23,16 @@
   font-size: large;
   font-weight: 100;
   color: #222;
-  max-width: 500px;
+  max-width: 510px;
   display: inline-table;
   margin: 3px;
 }
 
 header.App-btn {
-  margin-top: 22vh;
-}
-
-@media only screen and (max-width: 470px) {
-  header.App-btn {
-    margin-top: 30vh;
-  }
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
@@ -77,4 +75,8 @@ h2.categories {
     -ms-flex: 1;
     flex: 1 1;
     margin-top: 10px;
+}
+
+.mt-1.align.media {
+    margin-left: 15px;
 }
